# Tabb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/architecture/: hexagonal.puml
src/tabb/: __init__.py  __main__.py
src/tabb/adapters/config/: settings.py
src/tabb/application/: bus.py  exceptions.py  outbox.py
src/tabb/application/commands/: cancel_order.py  complete_order.py  create_menu_item.py  mark_item_ready.py  mark_menu_item_sold_out.py  place_order.py
src/tabb/application/dto/: __init__.py  menu_item_dtos.py  order_dtos.py
src/tabb/application/queries/: __init__.py  get_available_menu_items.py  get_order.py
src/tabb/application/read_models/: __init__.py  menu_item_read_model.py  order_read_model.py
src/tabb/domain/events/: base.py  events.py
src/tabb/domain/exceptions/: __init__.py  base.py  business.py  validation.py
tests/: conftest.py
tests/integration/: test_cqrs_flow.py
tests/unit/adapters/: test_background_outbox_worker.py
tests/unit/application/: test_bus.py  test_cancel_order.py  test_complete_order.py  test_create_menu_item.py  test_get_available_menu_items.py  test_get_order.py  test_mark_item_ready.py  test_mark_menu_item_sold_out.py  test_outbox_entry.py  test_place_order.py
tests/unit/domain/: test_building_blocks.py  test_events.py  test_exceptions.py  test_menu_item.py  test_order.py  test_order_service.py  test_value_objects.py
(+45 files in other folders)
